# sqlrustgo

./: CHANGELOG.md  Cargo.toml  README.md  tarpaulin-report.html  tarpaulin-report.json  tarpaulin.toml  v1.6.0_RC_STATUS.md
.github/workflows/: bench-pr.yml  bench-schedule.yml  benchmark.yml  ci.yml  regression.yml
benches/: bench_insert.rs  dataset_generator.rs  executor_bench.rs  tpch_bench.rs  tpch_comprehensive.rs
crates/executor/: Cargo.toml
crates/tools/: Cargo.toml
data/: dst.json  src.json  t1.json  test.json  users_idx_id.json
data/tpch-tiny/: customer.tbl  lineitem.tbl  nation.tbl  orders.tbl  part.tbl  partsupp.tbl  region.tbl  supplier.tbl
docs/: ISSUE_TPC-H-IMPLEMENTATION-ANALYSIS.md
docs/architecture/: ARCHITECTURE_V2.md  ARCHITECTURE_V2_OBSERVABILITY.md
docs/plans/: 2026-03-20-b11-benchmark-ci-design.md  2026-03-20-b11-benchmark-ci-impl.md  2026-03-20-postgres-benchmark-implementation.md
docs/releases/: VERSION_ROADMAP.md
docs/requirements/: requirements.md  user-stories.md
docs/v2.0/: GIT_PERMISSION_MODEL.md  GIT_PERMISSION_MODEL_V3.md  PRESENTATION_MATERIALS.md  WHITEPAPER_V3.md
releases/v1.4.0/: install.sh  run_benchmark.sh  test_install.sh
scripts/: compare_benchmarks.py  tpch_benchmark.py  tpch_simple.py
scripts/test/: run-regression.sh
src/: lib.rs  main.rs
src/executor/: mod.rs  table_scan.rs
src/lexer/: lexer.rs  token.rs
src/network/: mod.rs
src/parser/: mod.rs
src/planner/: analyzer.rs  logical_plan.rs  mod.rs  physical_plan.rs
src/storage/: buffer_pool.rs  engine.rs  file_storage.rs  memory.rs  page.rs
tests/: hash_join_test.rs  page_io_benchmark_test.rs  regression_test.rs
(+102 files in other folders)
