[workspace]
members = [
    "crates/common",
    "crates/types",
    "crates/storage",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["SQLRustGo Team"]
license = "MIT"

[workspace.dependencies]
# Crates
sqlrustgo-common = { path = "crates/common" }
sqlrustgo-types = { path = "crates/types" }
sqlrustgo-storage = { path = "crates/storage" }

# External dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
hex = "0.4"
bytes = "1.0"
lru-cache = "0.1.2"
ctrlc = "3.5.2"
serde_json = "1.0"
tempfile = "3.25.0"
criterion = "0.5"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.25.0"

[package]
name = "sqlrustgo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-storage.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
hex.workspace = true
bytes.workspace = true
lru-cache.workspace = true
ctrlc.workspace = true
serde_json.workspace = true

[[test]]
name = "project_test"
path = "tests/project_test.rs"

[[test]]
name = "ci_test"
path = "tests/ci_test.rs"

[[bench]]
name = "sql_operations"
harness = false

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false
